--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Wolverine Security Conference</title>
+    <title>WSC - Wolverine Security Conference</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
@@ -96,16 +96,15 @@
 
       <!-- Main Carousel Section Start -->
       <div id="main-slide" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#main-slide" data-slide-to="0" class="active"></li>
-        </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="assets/img/binary.jpeg" alt="First slide">
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">Cybersecurity Conference and CTF Competition</p>
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Wolverine Security Conference</h1>
-              <a href="#" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now</a>
+              <p>March 25-27</p><br><br>
+              <div><img src="assets/img/Conference_imgs/WSC_Logo.jpeg" class="img-fluid" style="width: 250px; height:250px;"alt=""></div>
+              <a href="#" class="btn-title fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s" style="margin-left:20px;">Register Now</a>
             </div>
           </div>
         </div>
@@ -130,10 +129,10 @@
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="about-item">
-              <img class="img-fluid" src="assets/img/about/img1.jpg" alt="">
+              <img class="img-fluid" src="assets/img/WolvSec_imgs/wolvsec.jpeg" alt="">
               <div class="about-text">
-                <h3><a href="#">What is WSC?</a></h3>
-                <p>The Wolverine Security Conference (WSC) is a volunteer, primarily student run effort by Wolvsec - a student organization at the University of Michigan. WSC was born from the Great Lakes Security Conference (GLSC) in collaboration with Michigan Tech University. It was a great success, and we hope to bring the same quality experience and program as last year.</p>
+                <h3>What is WSC?</h3>
+                <p>The Wolverine Security Conference (WSC) is a volunteer, primarily student run effort by <a href="https://www.wolvsec.org/">WolvSec</a> - a student organization at the University of Michigan. WSC was born from the Great Lakes Security Conference (GLSC) in collaboration with Michigan Tech University. It was a great success, and we hope to bring the same quality experience and program as last year.</p>
               </div>
             </div>
           </div>
@@ -141,7 +140,7 @@
             <div class="about-item">
               <img class="img-fluid" src="assets/img/about/img2.jpg" alt="">
               <div class="about-text">
-                <h3><a href="#">What you will learn at WSC?</a></h3>
+                <h3>What will you learn at WSC?</h3>
                 <p>The conference is focused on students of all levels, ranging from undergraduate to PhD students, as well as anyone with an interest in security. Because of this focus, the conference focuses on cross-sectioning the entire cybersecurity landscape. The conference hopes to offer further insights into the vast opportunities in cybersecurity.</p>
               </div>
             </div>
@@ -150,8 +149,9 @@
             <div class="about-item">
               <img class="img-fluid" src="assets/img/about/img3.jpg" alt="">
               <div class="about-text">
-                <h3><a href="#">The WSC CTF Competition</a></h3>
+                <h3>The WSC CTF Competition</h3>
                 <p>As part of the conference, there will be a CTF. Our esteemed members work tirelessly to bring new and stimulating CTF challenges that we hope can pose varying levels of difficulty and topic.</p>
+                <div><a href="#" class="fadeInLeft wow btn btn-common btn-lg btn-ctf" data-wow-delay=".6s">Register</a></div>
               </div>
             </div>
           </div>
@@ -178,7 +178,7 @@
                   <a class="nav-link active" id="monday-tab" data-toggle="tab" href="#monday" role="tab" aria-controls="monday" aria-expanded="true">
                     <div class="item-text">
                       <h4>Friday</h4>
-                      <h5>March 11</h5>
+                      <h5>March 25</h5>
                     </div>
                   </a>
                 </li>
@@ -186,7 +186,7 @@
                   <a class="nav-link" id="tuesday-tab" data-toggle="tab" href="#tuesday" role="tab" aria-controls="tuesday">
                     <div class="item-text">
                       <h4>Saturday</h4>
-                      <h5>March 12</h5>
+                      <h5>March 26</h5>
                     </div>
                   </a>
                 </li>
@@ -194,7 +194,7 @@
                   <a class="nav-link" id="wednesday-tab" data-toggle="tab" href="#wednesday" role="tab" aria-controls="wednesday">
                     <div class="item-text">
                       <h4>Sunday</h4>
-                      <h5>March 13</h5>
+                      <h5>March 27</h5>
                     </div>
                   </a>
                 </li>
@@ -211,21 +211,21 @@
                         <div class="images-box">
                           <img class="img-fluid" src="assets/img/speaker/speakers-1.jpg" alt="">
                         </div>
-                        <span class="time">1800 - 1900 EST</span>
-                        <h4>Hacking Shit</h4>
-                        <h5 class="name">Mike Green</h5>
+                        <span class="time">March 25</span>
+                        <h4>Schedule to be announced</h4>
+                        <h5 class="name">Presented by WolvSec</h5>
                       </div>
                     </div>
                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                       <div class="card-body">
-                        <p>This talk will briefly explore how to write bullshit. We will start with how to write nothing and end on a 3 page essay on bullshit.</p>
+                        <p>We hope your excited for Wolverine Security Conference! WSC will soon release our esteemed speaker lineup! Until then stay tuned and pre-register!</p>
                         <div class="location">
                           <span>Location:</span> Zoom
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="card">
+                  <!--<div class="card">
                     <div id="headingTwo">
                       <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseOne">
                         <div class="images-box">
@@ -395,7 +395,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
@@ -418,7 +418,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-01.jpg" alt="">
+                <img class="img-fluid" src="assets/img/Speakers/Cindy_Cohn.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -431,8 +431,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">JONATHAN DOE</a></h3>
-                <p>Product Designer, Tesla</p>
+                <h3><a href="#">Cindy Cohn</a></h3>
+                <p>Executive Director - EFF</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -441,7 +441,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-02.jpg" alt="">
+                <img class="img-fluid" src="assets/img/Speakers/Nicholas_Andersen.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -454,8 +454,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Patric Green</a></h3>
-                <p>Front-end Developer, Dropbox</p>
+                <h3><a href="#">Nicholas Andersen</a></h3>
+                <p>COO, Invictus International Consulting, LLC</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -465,7 +465,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.6s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-03.jpg" alt="">
+                <img class="img-fluid" src="assets/img/Speakers/Kate_Vajda.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -478,8 +478,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Paul Kowalsy</a></h3>
-                <p>Lead Designer, TNW</p>
+                <h3><a href="#">Kate Vajda</a></h3>
+                <p>Director of Vulnerability and Malware Threat Research, Dragos</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -489,7 +489,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.8s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-04.jpg" alt="">
+                <img class="img-fluid" src="assets/img/Speakers/Jeff_Scheidt.jpeg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -502,8 +502,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Jhon Doe</a></h3>
-                <p>Back-end Developer, ASUS</p>
+                <h3><a href="#">Jeff Scheidt</a></h3>
+                <p>Rear Admiral/Deputy Principal Cyber Advisor, Navy</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -525,37 +525,13 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Daryl Dixon</a></h3>
-                <p>Full-stack Developer, Google</p>
-              </div>
-            </div>
-            <!-- Team Item Ends -->
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-4">
-            <!-- Team Item Starts -->
-            <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
-              <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-06.jpg" alt="">
-                <div class="team-overlay">
-                  <div class="overlay-social-icon text-center">
-                    <ul class="social-icons">
-                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="info-text">
-                <h3><a href="#">Chris Adams</a></h3>
-                <p>UI Designer, Apple</p>
+                <h3><a href="#">More Speakers Coming Soon</a></h3>
+                <p>TBA</p>
               </div>
             </div>
             <!-- Team Item Ends -->
           </div>
         </div>
-        <a href="speakers.html" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">All Speakers</a>
       </div>
     </section>
     <!-- Team Section End -->
@@ -591,22 +567,17 @@
         <div class="row mb-30 text-center wow fadeInDown" data-wow-delay="0.3s">
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-01.png" alt=""></a>
+              <img class="img-fluid" src="assets/img/Sponsors/aptiv_logo.png" alt="">
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-02.png" alt=""></a>
+              <img class="img-fluid" src="assets/img/Sponsors/ccsw_logo.png" alt="">
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-03.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-04.png" alt=""></a>
+              <img class="img-fluid" src="assets/img/Sponsors/Ford_logo_flat.svg.png" alt="">
             </div>
           </div>
         </div>
