--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>WSC - Wolverine Security Conference</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/Conference_imgs/WSC_Logo.jpeg">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
@@ -100,7 +101,7 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="assets/img/binary.jpeg" alt="First slide">
             <div class="carousel-caption d-md-block">
-              <p class="fadeInUp wow" data-wow-delay=".6s">Cybersecurity Conference and CTF Competition</p>
+              <p class="fadeInUp wow" data-wow-delay=".6s" style="font-size: 36px;">Cybersecurity Conference and CTF Competition</p>
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Wolverine Security Conference</h1>
               <p>March 25-27</p><br><br>
               <div><img src="assets/img/Conference_imgs/WSC_Logo.jpeg" class="img-fluid" style="width: 250px; height:250px;"alt=""></div>
@@ -584,6 +585,17 @@
       </div>
     </section>
     <!-- Sponsors Section End -->
+
+    <section id="footer">
+      <div class="container footer-sts">
+        <img src="assets/img/WolvSec_imgs/wolvsec_circle.png" style="height: 200px; width: 200px; text-align: center;">
+        <p style="font-size: 20px">WolvSec Email: jbyifrp-nqzva@hzvpu.rqh (Decode with ROT13)</p>
+        <a href="https://wolvsec.org/">Website</a>  |
+        <a href="https://discord.gg/JND8QNRbSY">Discord</a>  |
+        <a href="https://twitter.com/WolvSec">Twitter</a>  |
+        <a href="https://github.com/WolvSec">Github</a></p>
+      </div>
+    </section>
 
     <!-- Go to Top Link -->
     <a href="#" class="back-to-top">
